external-crates/move/crates/move-compiler/tests/move_check/parser/spec_parsing_implies_fail.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: legacy
  lint: false
---
error[E03009]: unbound variable
  ┌─ tests/move_check/parser/spec_parsing_implies_fail.move:3:15
  │
3 │       let _ = x ==> x;
  │               ^ Unbound variable 'x'

error[E01010]: syntax item restricted to spec contexts
  ┌─ tests/move_check/parser/spec_parsing_implies_fail.move:3:17
  │
3 │       let _ = x ==> x;
  │                 ^^^ Specification-only operator is not supported
